Replace X509 internal JVM implementation